tests/baselines/reference/parserGreaterThanTokenAmbiguity19.errors.txt
==== tests/cases/compiler/parserGreaterThanTokenAmbiguity19.ts (1 errors) ====
    1 >>>
    = 2;
    ~
!!! parserGreaterThanTokenAmbiguity19.ts(2,1): error TS1109: Expression expected.